--- a/index.html
+++ b/index.html
@@ -6,9 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="styles.css">
     <title>Delani-Studio</title>
 </head>
 <body>
-    
+    <!-- home-->
+    <section>
+        <div>
+            <img src="https://i.ibb.co/TWkxxqQ/h-img.jpg" alt="h-img" border="0" />
+        <h1 class="lp">welcome</h1>
+        <h1 class="lp">To delani studio</h1>
+        <P class="lp">Amazing people are making amazing designs in a fun environment</P>
+        </div>
+    </section>
+
+    <!-- About us -->
+    <section>
+        div
+    </section>
+
+    <!-- Services -->
+    <section>
+
+    </section>
+
+    <!-- What we do -->
+    <section>
+
+    </section>
+    <!-- Portfolio -->
+    <section>
+
+    </section>
+    <!-- Contact us -->
+    <section>
+        
+    </section>
 </body>
 </html>
