--- a/index.html
+++ b/index.html
@@ -1,46 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Delani-Studio</title>
 </head>
+
 <body>
     <!-- home-->
     <section>
-        <div>
-            <img src="https://i.ibb.co/TWkxxqQ/h-img.jpg" alt="h-img" border="0" />
-        <h1 class="lp">welcome</h1>
-        <h1 class="lp">To delani studio</h1>
-        <P class="lp">Amazing people are making amazing designs in a fun environment</P>
+        <div class="home">
+            <img  id="logo"  src="https://i.ibb.co/DDDJfsX/logo.png" alt="logo" border="0" />
+            <h1 class="lp">welcome</h1>
+            <h1 class="lp">To delani studio</h1>
+            <P class="lp">Amazing people are making amazing designs in a fun environment</P>
+            <img id="mouse"  src="https://i.ibb.co/pPjNF2k/mouse-click.png" alt="mouse-click" border="0" />
         </div>
     </section>
 
     <!-- About us -->
     <section>
-        div
+        <div>
+
+        </div>
     </section>
 
     <!-- Services -->
     <section>
+        <div>
 
+        </div>
     </section>
 
     <!-- What we do -->
     <section>
+        <div>
 
+        </div>
     </section>
     <!-- Portfolio -->
     <section>
+        <div>
 
+        </div>
     </section>
     <!-- Contact us -->
     <section>
-        
+        <div>
+
+        </div>
     </section>
 </body>
+
 </html>
