added a container to the about us section and transformed h1 to uppercase.

--- a/index.html
+++ b/index.html
@@ -18,18 +18,27 @@
     <!-- home-->
     <section>
         <div class="home">
-            <img  id="logo"  src="https://i.ibb.co/DDDJfsX/logo.png" alt="logo" border="0" />
+            <img id="logo" src="https://i.ibb.co/DDDJfsX/logo.png" alt="logo" border="0" />
             <h1 class="lp">welcome</h1>
             <h1 class="lp">To delani studio</h1>
             <P class="lp">Amazing people are making amazing designs in a fun environment</P>
-            <img id="mouse"  src="https://i.ibb.co/pPjNF2k/mouse-click.png" alt="mouse-click" border="0" />
+            <img id="mouse" src="https://i.ibb.co/pPjNF2k/mouse-click.png" alt="mouse-click" border="0" />
         </div>
     </section>
 
     <!-- About us -->
     <section>
-        <div>
-
+        <div class="container-fluid">
+            <h2 style="text-transform: uppercase">About us</h2>
+            <p>When you work with us, you are a part of a team of commited collaborators. All
+                aspects of our software development process are intergrated, interactive and agile
+            </p>
+            <p>Our approach unifies design, development and product managment to create exeptional
+                products.</p>
+            <p>We start each projrct by understanding your business goals, the user's needs
+                and the product requirements.<br> Then we help them translate into effective
+                and elegant solutions.
+            </p>
         </div>
     </section>
 
