--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
 
     <!-- Services -->
     <section>
-        <div>
-
+        <div class="services">
+            <h2 class="sh" style="text-transform: uppercase">Services</h2>
+            <p class="sp">Before we sign a contract or write a line of code, our team will spend necessary time
+                needed to understand your product vision.<br><br>The outcome of this scoping session is a
+                proposal or high level statement of work.<br><br>Based on your requirements, we can provide a
+                complete offering or just the pieces you need.</p>
         </div>
     </section>
 
