--- a/index.html
+++ b/index.html
@@ -56,8 +56,69 @@
     <!-- What we do -->
     <section>
         <div>
-
+            <h2>About us</h2>
+            <p>When you work with us, you are a part of a team of commited collaborators. All
+                aspects of our software development process are intergrated, interactive and agile
+            </p>
+            <p>Our approach unifies design, development and product managment to create exeptional
+                products.</p>
+            <p>We start each projrct by understanding your business goals, the user's needs
+                and the product requirements.<br> Then we help them translate into effective
+                and elegant solutions.
+            </p>
         </div>
+        <div class="services">
+            <h2 class="sh">Services</h2>
+            <p class="sp">Before we sign a contract or write a line of code, our team will spend necessary time
+                needed to understand your product vision.<br><br>The outcome of this scoping session is a
+                proposal or high level statement of work.<br><br>Based on your requirements, we can provide a
+                complete offering or just the pieces you need.</p>
+        </div>
+        <div class="container-fluid">
+            <h1 style="text-transform: uppercase">What we do</h1><br><br>
+            <div class="row">
+                <div class="col-md-4">
+                    <div id="design">
+                            <img src="https://i.ibb.co/MyT7V9q/design-icon.png" alt="design-icon" border="0"><br>
+                        <p>DESIGN</p>
+                    </div>
+                    <!-- <div id="hide">
+                        <h4><strong>DESIGN</strong></h4>
+                        <p>Our design practice offers a full range of services including brand strategy, interaction and
+                            visual design and user experience testing.<br>
+                            Throughout your project, our designers create and implement visual design and workflows,
+                            solicit
+                            user feedback and work with you to make sure what gets built is what is needed.</p>
+                    </div> -->
+                </div>
+                <div class="col-md-4">
+                    <div id="dev">
+                            <img src="https://i.ibb.co/cQxxKyj/dev-icon.png" alt="dev-icon" border="0"><br>
+                        <p>DEVELOPMENT</p>
+                    </div>
+                    <!-- <div id="hide1">
+                        <h4><strong>DEVELOPMENT</strong></h4>
+                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                            They collaborate with your team to write, and improve code on a daily basis, using proven
+                            practices such as test-driven development and pair programming.</p>
+                    </div> -->
+                </div>
+                <div class="col-md-4">
+                    <div id="product">
+                            <img src="https://i.ibb.co/sgtt60d/product-icon.png" alt="product-icon" border="0">
+                        <p>PRODUCT MANAGMENT</p>
+                    </div>
+                    <!-- <div id="hide2">
+                        <h4><strong>PRODUCT MANAGMENT</strong></h4>
+                        <p>Planning and development is iterative. Because we are constantly coding and testing, the
+                            products
+                            we build are always ready to go live.
+                            This iterative process allows for changes as business requirements evolve.</p>
+                    </div> -->
+                </div>
+            </div>
+        </div>
+        
     </section>
     <!-- Portfolio -->
     <section>
