--- a/index.html
+++ b/index.html
@@ -55,31 +55,12 @@
 
     <!-- What we do -->
     <section>
-        <div>
-            <h2>About us</h2>
-            <p>When you work with us, you are a part of a team of commited collaborators. All
-                aspects of our software development process are intergrated, interactive and agile
-            </p>
-            <p>Our approach unifies design, development and product managment to create exeptional
-                products.</p>
-            <p>We start each projrct by understanding your business goals, the user's needs
-                and the product requirements.<br> Then we help them translate into effective
-                and elegant solutions.
-            </p>
-        </div>
-        <div class="services">
-            <h2 class="sh">Services</h2>
-            <p class="sp">Before we sign a contract or write a line of code, our team will spend necessary time
-                needed to understand your product vision.<br><br>The outcome of this scoping session is a
-                proposal or high level statement of work.<br><br>Based on your requirements, we can provide a
-                complete offering or just the pieces you need.</p>
-        </div>
         <div class="container-fluid">
             <h1 style="text-transform: uppercase">What we do</h1><br><br>
             <div class="row">
                 <div class="col-md-4">
                     <div id="design">
-                            <img src="https://i.ibb.co/MyT7V9q/design-icon.png" alt="design-icon" border="0"><br>
+                        <img src="https://i.ibb.co/MyT7V9q/design-icon.png" alt="design-icon" border="0"><br>
                         <p>DESIGN</p>
                     </div>
                     <!-- <div id="hide">
@@ -93,7 +74,7 @@
                 </div>
                 <div class="col-md-4">
                     <div id="dev">
-                            <img src="https://i.ibb.co/cQxxKyj/dev-icon.png" alt="dev-icon" border="0"><br>
+                        <img src="https://i.ibb.co/cQxxKyj/dev-icon.png" alt="dev-icon" border="0"><br>
                         <p>DEVELOPMENT</p>
                     </div>
                     <!-- <div id="hide1">
@@ -105,7 +86,7 @@
                 </div>
                 <div class="col-md-4">
                     <div id="product">
-                            <img src="https://i.ibb.co/sgtt60d/product-icon.png" alt="product-icon" border="0">
+                        <img src="https://i.ibb.co/sgtt60d/product-icon.png" alt="product-icon" border="0">
                         <p>PRODUCT MANAGMENT</p>
                     </div>
                     <!-- <div id="hide2">
@@ -118,7 +99,7 @@
                 </div>
             </div>
         </div>
-        
+
     </section>
     <!-- Portfolio -->
     <section>
@@ -128,10 +109,23 @@
     </section>
     <!-- Contact us -->
     <section>
-        <div>
+        <div class=" container-fluid text-center" id="contacts">
+            <h2>CONTACT US</h2>
+            <form class="form-group forms" id="forms" method="POST">
+                <div class="row">
+                    <input type="text" id="name" class="bgTransparent col" placeholder="Name..">
+                    <input type="email" id="email" class="bgTransparent col" placeholder="Email..">
+                </div>
 
+                <textarea id="textarea" class="bgTransparent" placeholder="Your message here.." rows="8"></textarea>
+                <div>
+                    <input type="submit" class="btn btn-secondary">
+                </div>
+            </form>
         </div>
     </section>
+
+    
 </body>
 
 </html>
