added social icons

--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
         </div>
     </section>
 
+    <section>
+            <div class="text-center pb-4 pt-4" id="social-icon">
+                    <img src="https://i.ibb.co/3FvSrz9/twitter.png" alt="twitter icon" class="social-icons">
+                    <img src="https://i.ibb.co/RQkQQDk/dribble.png" alt="dribble icon" class="social-icons">
+                    <img src="https://i.ibb.co/zPvqWbd/facebook.png" alt="facebook icon" class="social-icons">
+                    <img src="https://i.ibb.co/K9m6gjx/g-plus.png" alt="google plus icon" class="social-icons">
+                    <img src="https://i.ibb.co/NKfqCvj/skype.png" alt="skype" class="social-icons">
+                    <img src="https://i.ibb.co/98w9bzt/stumble-upon.png" alt="stumble_upon icon" class="social-icons">
+                    <img src="https://i.ibb.co/tzvStSP/flickr.png" alt="flickr icon" class="social-icons">
+                    <img src="https://i.ibb.co/s3Kv4zs/behance.png" alt="behance icon" class="social-icons">
+                    <img src="https://i.ibb.co/rf5ZNxB/pinterest.png" alt="pinterest icon" class="social-icons">
+                  </div>
+    </section>
+
     <script src="js/script.js"></script>
 
 </body>
