--- a/index.html
+++ b/index.html
@@ -137,6 +137,11 @@
                     <img src="https://i.ibb.co/s3Kv4zs/behance.png" alt="behance icon" class="social-icons">
                     <img src="https://i.ibb.co/rf5ZNxB/pinterest.png" alt="pinterest icon" class="social-icons">
                   </div>
+
+                  <footer class="text-center">
+                        <p>DELANI STUDIO</p>
+                        <span>&copy;2019</span>
+                      </footer>  
     </section>
 
     <script src="js/script.js"></script>
