made changes to the what we do section

--- a/index.html
+++ b/index.html
@@ -55,56 +55,133 @@
 
     <!-- What we do -->
     <section>
-        <div class="container-fluid">
-            <h1 style="text-transform: uppercase">What we do</h1><br><br>
+        <div class="container text-center" id="what-we-do">
+            <h2 class="text-center" style="text-transform: uppercase">what we do</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <div id="design">
-                        <img src="https://i.ibb.co/MyT7V9q/design-icon.png" alt="design-icon" border="0"><br>
-                        <p>DESIGN</p>
-                    </div>
-                    <!-- <div id="hide">
-                        <h4><strong>DESIGN</strong></h4>
+                    <figure id="design">
+                        <img src="images/services_icons/design_icon.png" alt="design">
+                        <figcaption>DESIGN</figcaption>
+                    </figure>
+                    <div id="design-hide">
+                        <h5>DESIGN</h5>
                         <p>Our design practice offers a full range of services including brand strategy, interaction and
-                            visual design and user experience testing.<br>
+                            visual design
+                            and user experience testing.<br>
                             Throughout your project, our designers create and implement visual design and workflows,
-                            solicit
-                            user feedback and work with you to make sure what gets built is what is needed.</p>
-                    </div> -->
+                            solicit user
+                            feedback and work with you to make sure what gets built is what is needed.</p>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <div id="dev">
-                        <img src="https://i.ibb.co/cQxxKyj/dev-icon.png" alt="dev-icon" border="0"><br>
-                        <p>DEVELOPMENT</p>
-                    </div>
-                    <!-- <div id="hide1">
-                        <h4><strong>DEVELOPMENT</strong></h4>
-                        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies.
+                    <figure id="dev">
+                        <img src="images/services_icons/dev_icon.png" alt="Development">
+                        <figcaption>DEVELOPMENT</figcaption>
+                    </figure>
+                    <div id="dev-hide">
+                        <h5>DEVELOPMENT</h5>
+                        <p>All engineers are fluent in the latest enterprise, mobile and web development
+                            technologies.<br>
                             They collaborate with your team to write, and improve code on a daily basis, using proven
-                            practices such as test-driven development and pair programming.</p>
-                    </div> -->
+                            practices such as
+                            test-driven development and pair programming.</p>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <div id="product">
-                        <img src="https://i.ibb.co/sgtt60d/product-icon.png" alt="product-icon" border="0">
-                        <p>PRODUCT MANAGMENT</p>
-                    </div>
-                    <!-- <div id="hide2">
-                        <h4><strong>PRODUCT MANAGMENT</strong></h4>
+                    <figure id="prod">
+                        <img src="images/services_icons/product_icon.png" alt="Product management">
+                        <figcaption>PRODUCT MANAGEMENT</figcaption>
+                    </figure>
+                    <div id="prod-hide">
+                        <h5>PRODUCT MANAGEMENT</h5>
                         <p>Planning and development is iterative. Because we are constantly coding and testing, the
-                            products
-                            we build are always ready to go live.
+                            products we build
+                            are always ready to go live.<br>
                             This iterative process allows for changes as business requirements evolve.</p>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
-
     </section>
     <!-- Portfolio -->
     <section>
-        <div>
-
+        <div class="portfolio container-fluid">
+            <br><br><br>
+            <h1 class="text-center b-text">PORTFOLIO</h1><br>
+            <div class="col-md-12 mx-auto">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="https://i.ibb.co/WgQW1qy/work4.jpg" alt="portfolio-images"
+                                class="image img-fluid">
+                            <div>
+                                <div class="porttext" style="display:none"> Delani Studio</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="https://i.ibb.co/W3WFVrR/work3.jpg" alt="portfolio-images"
+                                class="image img-fluid">
+                            <div>
+                                <div class="porttext" style="display:none">Delani Studio</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="https://i.ibb.co/yhrsJCb/work2.jpg" alt="portfolio-images"
+                                class="image img-fluid">
+                            <div>
+                                <div class="porttext" style="display:none">Delani Studio</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src=https://i.ibb.co/9HcKqdd/work1.jpg"" alt="portfolio-images"
+                                class="image img-fluid">
+                            <div class="disc1">
+                                <div class="porttext" style="display:none">Delani Studio</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="https://i.ibb.co/xqtsvGQ/work5.jpg" alt="portfolio-images"
+                                class="image img-fluid">
+                            <div class="porttext" style="display:none">Delani Studio</div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="https://i.ibb.co/jJZpQDD/work6.jpg" alt="portfolio-images"
+                                class="image img-fluid">
+                            <div class="porttext" style="display:none">Delani Studio</div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="https://i.ibb.co/x5Nz63z/work7.jpg" alt="portfolio-images"
+                                class="image img-fluid">
+                            <div class="porttext" style="display:none">Delani Studio</div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="portimg">
+                            <img src="images/portfolio/work8.jpg" alt="portfolio-images" class="image img-fluid">
+                            <div class="porttext" style="display:none">Delani Studio</div>
+                        </div>
+                    </div>
+                    <div class="col-md-2"></div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Contact us -->
@@ -126,22 +203,22 @@
     </section>
 
     <section>
-            <div class="text-center pb-4 pt-4" id="social-icon">
-                    <img src="https://i.ibb.co/3FvSrz9/twitter.png" alt="twitter icon" class="social-icons">
-                    <img src="https://i.ibb.co/RQkQQDk/dribble.png" alt="dribble icon" class="social-icons">
-                    <img src="https://i.ibb.co/zPvqWbd/facebook.png" alt="facebook icon" class="social-icons">
-                    <img src="https://i.ibb.co/K9m6gjx/g-plus.png" alt="google plus icon" class="social-icons">
-                    <img src="https://i.ibb.co/NKfqCvj/skype.png" alt="skype" class="social-icons">
-                    <img src="https://i.ibb.co/98w9bzt/stumble-upon.png" alt="stumble_upon icon" class="social-icons">
-                    <img src="https://i.ibb.co/tzvStSP/flickr.png" alt="flickr icon" class="social-icons">
-                    <img src="https://i.ibb.co/s3Kv4zs/behance.png" alt="behance icon" class="social-icons">
-                    <img src="https://i.ibb.co/rf5ZNxB/pinterest.png" alt="pinterest icon" class="social-icons">
-                  </div>
+        <div class="text-center pb-4 pt-4" id="social-icon">
+            <img src="https://i.ibb.co/3FvSrz9/twitter.png" alt="twitter icon" class="social-icons">
+            <img src="https://i.ibb.co/RQkQQDk/dribble.png" alt="dribble icon" class="social-icons">
+            <img src="https://i.ibb.co/zPvqWbd/facebook.png" alt="facebook icon" class="social-icons">
+            <img src="https://i.ibb.co/K9m6gjx/g-plus.png" alt="google plus icon" class="social-icons">
+            <img src="https://i.ibb.co/NKfqCvj/skype.png" alt="skype" class="social-icons">
+            <img src="https://i.ibb.co/98w9bzt/stumble-upon.png" alt="stumble_upon icon" class="social-icons">
+            <img src="https://i.ibb.co/tzvStSP/flickr.png" alt="flickr icon" class="social-icons">
+            <img src="https://i.ibb.co/s3Kv4zs/behance.png" alt="behance icon" class="social-icons">
+            <img src="https://i.ibb.co/rf5ZNxB/pinterest.png" alt="pinterest icon" class="social-icons">
+        </div>
 
-                  <footer class="text-center">
-                        <p>DELANI STUDIO</p>
-                        <span>&copy;2019</span>
-                      </footer>  
+        <footer class="text-center">
+            <p>DELANI STUDIO</p>
+            <span>&copy;2019</span>
+        </footer>
     </section>
 
     <script src="js/script.js"></script>
