added jquery cdn

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <figure id="design">
-                        <img src="images/services_icons/design_icon.png" alt="design">
+                        <img src="https://i.ibb.co/MyT7V9q/design-icon.png" alt="design">
                         <figcaption>DESIGN</figcaption>
                     </figure>
                     <div id="design-hide">
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col-md-4">
                     <figure id="dev">
-                        <img src="images/services_icons/dev_icon.png" alt="Development">
+                        <img src="https://i.ibb.co/cQxxKyj/dev-icon.png" alt="Development">
                         <figcaption>DEVELOPMENT</figcaption>
                     </figure>
                     <div id="dev-hide">
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-md-4">
                     <figure id="prod">
-                        <img src="images/services_icons/product_icon.png" alt="Product management">
+                        <img src="https://i.ibb.co/sgtt60d/product-icon.png" alt="Product management">
                         <figcaption>PRODUCT MANAGEMENT</figcaption>
                     </figure>
                     <div id="prod-hide">
@@ -221,7 +221,8 @@
         </footer>
     </section>
 
-    <script src="js/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
