--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
@@ -56,7 +57,7 @@
     <!-- What we do -->
     <section>
         <div class="container text-center" id="what-we-do">
-            <h2 class="text-center" style="text-transform: uppercase">what we do</h2>
+            <h2 class="wh" style="text-transform: uppercase">what we do</h2>
             <div class="row">
                 <div class="col-md-4">
                     <figure id="design">
@@ -106,7 +107,6 @@
     <!-- Portfolio -->
     <section>
         <div class="portfolio container-fluid">
-            <br><br><br>
             <h1 class="text-center b-text">PORTFOLIO</h1><br>
             <div class="col-md-12 mx-auto">
                 <div class="row">
