--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img id="mouse" src="https://i.ibb.co/pPjNF2k/mouse-click.png" alt="mouse-click" border="0" />
         </div>
     </section>
-
+g
     <!-- About us -->
     <section>
         <div class="container-fluid">
@@ -57,7 +57,7 @@
     <!-- What we do -->
     <section>
         <div class="container text-center" id="what-we-do">
-            <h2 class="wh" style="text-transform: uppercase">what we do</h2>
+            <h2 class="wh" style="text-transform: uppercase">what we do</h2><br>
             <div class="row">
                 <div class="col-md-4">
                     <figure id="design">
@@ -77,7 +77,7 @@
                 <div class="col-md-4">
                     <figure id="dev">
                         <img src="https://i.ibb.co/cQxxKyj/dev-icon.png" alt="Development">
-                        <figcaption>DEVELOPMENT</figcaption>
+                        <figcaption class="fig">DEVELOPMENT</figcaption>
                     </figure>
                     <div id="dev-hide">
                         <h5>DEVELOPMENT</h5>
@@ -104,6 +104,7 @@
             </div>
         </div>
     </section>
+    <br>
     <!-- Portfolio -->
     <section>
         <div class="portfolio container-fluid">
